Fix links in dark mode

--- a/errands/resources/style-dark.css
+++ b/errands/resources/style-dark.css
@@ -25,3 +25,7 @@
 .task-brown {
     background: #9a826f;
 }
+
+link {
+    color: white;
+}
